k8s-yaml-files/ingress-configurations/my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
spec:
  ingressClassName: nginx
  rules:
  - host: nasr.project # add this domain to /etc/hosts (if you don't have a domian) with ingress load balancer external ip
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: my-loadbalancer
            port:
              number: 8000
